--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>AI Assistant</title>
+  <title>Nebula - AI Assistant</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="chat-container">
     <div class="header">Nebula - AI Assistant</div>
     <div id="chat-box" class="chat-box"></div>
+    <div id="typing-indicator">Nebula is typing...</div>
     <div class="input-area">
       <input type="text" id="user-input" placeholder="Ask me anything..." />
       <button onclick="sendMessage()">Send</button>
