--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
       <div id="typing-indicator" class="typing-indicator" style="display: none;">🪐 Nebula is typing...</div>
     </div>
 
-    <!-- Input and Actions -->
+    <!-- Input Area -->
     <div class="input-area">
       <input type="text" id="user-input" placeholder="Ask me anything..." />
-      <input type="file" id="file-upload" style="display: none;" />
-      <button onclick="document.getElementById('file-upload').click()">📁</button>
       <button onclick="startVoiceInput()">🎤</button>
       <button onclick="sendMessage()">➤</button>
     </div>
